--- a/src/main/resources/assets/modpackinone/lang/en_us.json
+++ b/src/main/resources/assets/modpackinone/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "advancements.lol.title": "Lol",
   "advancements.test.title": "Test",
+  "advancements.lol.descr": "jh",
   "advancements.test.descr": "test"
 }
